--- a/Support/abstract.tex
+++ b/Support/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
-This final year project report details the aproach taken while developing a system designed to convert video data into sensible, ``human-readable'' sound data.
+    This final year project report details possible methods of sonfifying video and depth data, with the view to allowing a blind person to navigate a room without any additional assistance.
 
-The report details several key components of such a system, including image acquisition, region segmentation and extraction, shape feature extraction, and shape feature sonification.
+    The report also details and critically evaluates existing solutions to the problem of video to audio conversion, noting their shortcomings and pointing out areas in which they are successful. 
 
-It is anticipated that this investigatory project will serve as the basis of a broader system.
+    By means of an experimental approach, several prototype systems are explained and discussed. Relevant theory has been explained where deemed necessary --- including concepts relating to image segmentation, descriptor extraction, shape classification and tone generation.
 \end{abstract}
