--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,8 +1,8 @@
 \section*{List of Acronyms}
 \begin{acronym}
 \acro{WHO}{World Health Organisation}
-\acro{IR}{Infra-red}
-\acro{RGB-D}{Red, Green, Blue and Depth}
+\acro{IR}{infra-red}
+\acro{RGB-D}{red, green, blue and depth}
 \acro{RGB}{Red, Green and Blue}
 \acro{FFT}{Fast-Fourier transform}
 \acro{VAS}{Virtual Acoustic Space}
