--- a/references.bib
+++ b/references.bib
@@ -323,3 +323,23 @@ doi={10.1109/ICTTA.2006.1684482},}
     author = {R. Nave},
     urldate = {2015-04-26}
 }
+
+@article{dawkins1996blind,
+  title={The Blind Watchmaker: Why The Evidence Of Evolution Reveals A Universe Without Design Author: Richard Dawkins, Publisher},
+  author={Dawkins, Richard},
+  year={1996},
+  publisher={WW Norton \& Company}
+}
+
+@article{striem2013neuroplasticity,
+  title={NEUROPLASTICITY IN THE BLIND AND SENSORY SUBSTITUTION FOR VISION},
+  author={Striem-Amit, Ella},
+  year={2013}
+}
+
+@online{blindcost,
+    url = {https://www.rnib.org.uk/sites/default/files/FSUK_Summary_1.pdf},
+    title = {The economic impact of partial sight and blindness in the UK adult population},
+    author = {Access Economics Pty Limited},
+    year = {2009}
+}
