--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %%% Template from: https://www.sharelatex.com/templates/thesis/thesis-template-with-memoir
 
-\documentclass[11pt,a4paper]{memoir}
+\documentclass[12pt,a4paper,oneside]{memoir}
 \usepackage[dvips]{graphicx}
 \usepackage{xcolor}
 \usepackage{float}
@@ -34,7 +34,7 @@ bookmarks=true,bookmarksopenlevel=2]{hyperref}
 %left=20mm,right=20mm,
 %bindingoffset=10mm, top=25mm,bottom=25mm}
 
-\OnehalfSpacing
+%\OnehalfSpacing
 %\linespread{1.3}
 
 %%% CHAPTER'S STYLE
@@ -113,6 +113,10 @@ May 2015
 }
 
 \newpage
+\thispagestyle{empty}
+\input{Support/acknowledgements.tex}
+
+\newpage
 
 \input{Support/abstract.tex}
 
@@ -120,34 +124,30 @@ May 2015
 
 \tableofcontents*
 
-%\clearpage
+\clearpage
 
-%\lstlistoflistings
-
+\listoffigures
 \mainmatter
-
 \chapter{Introduction}
 \input{MainBody/intro.tex}
-
 \chapter{Proposed Solution}
 \input{MainBody/proposed-solution.tex}
-
 \chapter{Background}
 \input{MainBody/background.tex}
-
 \chapter{Relevant Theory}
 \input{MainBody/relevant-theory.tex}
-
 \chapter{Implementation}
 \input{MainBody/implementation.tex}
-
+\chapter{Future Work}
+\input{MainBody/future-work.tex}
+\chapter{Conclusions}
+\input{MainBody/conclusions.tex}
+\chapter{Reflection on Learning}
+\input{MainBody/reflection-on-learning.tex}
 \newpage
 \input{acronyms.tex}
 
-
 \newpage
 \printbibliography
-
-
 \end{document}
 
